# NanoSynth

./: CMakeLists.txt  README.md
resource/: NanoSynth_editor.uidesc
source/: LFO.cpp  LFO.h  NanoSynth_cids.h  NanoSynth_controller.cpp  NanoSynth_controller.h  NanoSynth_entry.cpp  NanoSynth_processor.cpp  NanoSynth_processor.h  Oscillator.cpp  Oscillator.h  QBLimitedOscillator.cpp  QBLimitedOscillator.h  SynthParamLimits.h  WTOscillator.cpp  WTOscillator.h  logscale.h  lookuptables.h  pluginconstants.h  pluginobjects.cpp  synthfunctions.h  version.h
